--- a/styles/Homepage.module.css
+++ b/styles/Homepage.module.css
@@ -1,3 +1,12 @@
+.cover
+{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    top:0px;
+    left:0px
+}
+
 .logobox
 {
     display: flex;
@@ -59,4 +68,32 @@ font-family: "Comfortaa", sans-serif;
     transform: translateY(-50%);
     background-color: rgb(209, 208, 208);
     border-radius: 50%;
+}
+
+.img
+{
+    overflow-x: hidden;
+    position: absolute;
+    right: -100px;
+}
+.img .image
+{
+    width: 554px;
+    height:580px;
+}
+
+.name
+{
+    position: absolute;
+    margin-left: 20px;
+    top:80vh;
+}
+.name span:nth-child(1)
+{
+    font-size: 20px;
+}
+.name span:nth-child(3)
+{
+    font-size: 40px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
