--- a/styles/Homepage.module.css
+++ b/styles/Homepage.module.css
@@ -1,8 +1,9 @@
 .cover
 {
+    overflow-x:hidden ;
     position: relative;
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    min-width: 100vw;
     top:0px;
     left:0px
 }
@@ -12,9 +13,8 @@
     display: flex;
     position: relative;
     top:0px;
-    width: 100%;
-    justify-content: flex-end;
-    align-items: flex-end;
+    width: 100vw;
+    justify-content: space-between;
 }
 
 .logo{
@@ -24,12 +24,12 @@
     margin-right: 40px;
     align-self: flex-end;
 }
-.logo
+/* .logo
 {
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
-}
+} */
 .heading span
 {
 font-family: "Comfortaa", sans-serif;
@@ -75,11 +75,18 @@ font-family: "Comfortaa", sans-serif;
     overflow-x: hidden;
     position: absolute;
     right: -100px;
+    bottom: 0px;
+    /* opacity: 1; */
 }
 .img .image
 {
     width: 554px;
     height:580px;
+}
+@media (max-width:608) {
+    .img{
+        opacity: .6;
+    }
 }
 
 .name
