--- a/Components/box.module.css
+++ b/Components/box.module.css
@@ -2,29 +2,68 @@
 {
     font-weight: 600;
     position: relative;
-    background-color: rgb(230, 209, 252);
+    background-color: rgba(230, 209, 252, 0.44);
     width: 80vw;
     left:50%;
     transform: translate(-50%,0);
     margin-bottom: 50px;
     padding: 20px;
     border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(155, 61, 255, 0.266);
 }
 .box h3{
     font-size: 22px;
 }
 .testboxred
 {
-    background-color: rgba(255, 0, 0, 0.34);
+    position: relative;
+    background-color: rgba(252, 18, 18, 0.158);
+}
+.testboxred::before
+{
+    content: '';
+    position: absolute;
+    top:20px;
+    right:50px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 10px red;
+    background-color: red;
 }
 .testboxgreen
 {
-    background-color: rgba(77, 255, 77, 0.4);
+    background-color: rgba(118, 223, 118, 0.263);
 
+}
+.testboxgreen:hover{
+    box-shadow: 0px 0px 10px rgba(0,0,0,.2);
+    background-color: rgba(118, 223, 118, 0.492);
+
+}
+
+.testboxred:hover{
+    box-shadow: 0px 0px 10px rgba(0,0,0,.2);
+    background-color: rgba(252, 18, 18, 0.302);
+
+
+}
+.testboxgreen::before
+{
+    content: '';
+    position: absolute;
+    top:20px;
+    right:50px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 10px rgb(33, 208, 33);
+    background-color: rgb(33, 208, 33);
 }
 .testboxgreen,
 .testboxred
 {
+    position: relative;
     /* background-color: rgb(165, 165, 165); */
     margin-top: 20px;
     padding: 15px;
