--- a/pages/details/details.module.css
+++ b/pages/details/details.module.css
@@ -1,3 +1,7 @@
+.body{
+font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+}
 .h2{
     color:rgb(58, 58, 144);
     margin-left: 40px;
@@ -5,15 +9,23 @@
 }
 .desc
 {
+    
+font-family: Georgia, 'Times New Roman', Times, serif;
     display: flex;
-    margin: 40px;
+    margin-left: 40px;
+    margin-right: 40px;
     margin-top: 60px;;
     background-color: rgba(161, 198, 243, 0.25);
     padding: 20px;
-    border-radius: 40px;
+    font-size: 14px;
+    line-height: 18px;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
 }
 .desc h4{
-    margin-bottom: 10px;
+    margin-bottom: 16px;
+    font-size: 20px;
+
 }
 
 .desc img{
@@ -32,4 +44,36 @@
     100%{
         opacity: 1;
     }
+}
+.details{ 
+    position: relative;
+    margin-left: 40px;
+    margin-right: 40px;
+    background-color: rgba(161, 198, 243, 0.25);
+    padding: 20px;
+    margin-top: 10px;
+    font-size: 14px;
+
+}
+.indicator
+{
+    display: flex;
+    position: absolute;
+    right: 40px;
+    top:20px;
+    gap:8px
+}
+.indicator .highyes{
+    top:50%;
+    width: 16px;
+    height: 16px;
+    background-color: red;
+    border-radius: 50%;
+}
+.indicator .highno{
+    background-color: rgb(100, 178, 100);
+}
+.symp{
+    margin-top: 24px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
