--- a/Components/IndicatorBar.module.css
+++ b/Components/IndicatorBar.module.css
@@ -44,6 +44,7 @@ border-bottom-left-radius: 10px;
     left: 50%;;
     margin-top: 10px;
     transform: translate(-50%,0);
+    width: 80px;
     border-radius: 4px !important;
 }
 .indicatorBar div div:hover{
