--- a/pages/details/details.module.css
+++ b/pages/details/details.module.css
@@ -5,7 +5,7 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
 .h2{
     color:rgb(58, 58, 144);
     margin-left: 40px;
-    margin-top: 20px;
+    margin-top: 50px;
 }
 .desc
 {
@@ -29,6 +29,9 @@ font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .desc img{
+    position: relative;
+    top:50%;
+    transform: translateY(-50%);
     width:100px
 }
 .loading{
@@ -49,10 +52,12 @@ font-family: Georgia, 'Times New Roman', Times, serif;
     position: relative;
     margin-left: 40px;
     margin-right: 40px;
-    background-color: rgba(161, 198, 243, 0.25);
+    background-color: rgba(228, 186, 228, 0.2);
     padding: 20px;
     margin-top: 10px;
     font-size: 14px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 
 }
 .indicator
