--- a/styles/Homepage.module.css
+++ b/styles/Homepage.module.css
@@ -1,141 +1,127 @@
-.cover
-{
-    overflow:hidden ;
-    position: relative;
-    min-height: 100vh;
-    min-width: 100vw;
-    top:0px;
-    left:0px
+.cover {
+  overflow: hidden;
+  position: relative;
+  min-height: 100vh;
+  min-width: 100vw;
+  top: 0px;
+  left: 0px;
 }
 
-.logobox
-{
-    display: flex;
-    position: relative;
-    top:0px;
-    width: 100vw;
-    justify-content: space-between;
+.logobox {
+  display: flex;
+  position: relative;
+  top: 0px;
+  width: 100vw;
+  justify-content: space-between;
 }
 
-.logo{
-    position: relative;
-    right: 0px;
-    margin-top: 20px;
-    margin-right: 40px;
-    align-self: flex-end;
-    margin-bottom: 40px;
+.logo {
+  position: relative;
+  right: 0px;
+  margin-top: 20px;
+  margin-right: 40px;
+  align-self: flex-end;
+  margin-bottom: 40px;
 }
-.logo
-{
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+.logo {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
 }
-.heading span
-{
-font-family: "Comfortaa", sans-serif;
+.heading span {
+  font-family: "Comfortaa", sans-serif;
   font-optical-sizing: auto;
   font-weight: 700;
   font-size: 48px;
   font-style: normal;
   color: rgb(138, 146, 255);
 }
-.heading
-{
-    margin-top: 30px;;
-    margin-left: 20px;
-    font-family: "Kumbh Sans", sans-serif;
+.heading {
+  margin-top: 30px;
+  margin-left: 20px;
+  font-family: "Kumbh Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: normal;
-  font-variation-settings:"YOPQ" 300;
-    font-size: 36px;
-    color: rgb(255, 31, 31);
+  font-variation-settings: "YOPQ" 300;
+  font-size: 36px;
+  color: rgb(255, 31, 31);
 }
-.heading .hr
-{
-    display: flex;
-    height: 1px;
-    justify-content: flex-end;
-    background-color: rgb(96, 96, 96);
-    margin-top: 10px;
-    margin-left: -25px;
-    width: 380px;
+.heading .hr {
+  display: flex;
+  height: 1px;
+  justify-content: flex-end;
+  background-color: rgb(96, 96, 96);
+  margin-top: 10px;
+  margin-left: -25px;
+  width: 380px;
 }
-.heading .circle
-{
-    width: 10px;
-    height: 10px;
-    transform: translateY(-50%);
-    background-color: rgb(209, 208, 208);
-    border-radius: 50%;
+.heading .circle {
+  width: 10px;
+  height: 10px;
+  transform: translateY(-50%);
+  background-color: rgb(209, 208, 208);
+  border-radius: 50%;
 }
 
-.img
-{
-    overflow-x: hidden;
-    position: absolute;
-    right: max(-40px,-10vw);
-    bottom: -20px;
-    padding: none;
-    margin: none;
-    /* opacity: 1; */
+.img {
+  overflow-x: hidden;
+  position: absolute;
+  right: max(-40px, -10vw);
+  bottom: -20px;
+  padding: none;
+  margin: none;
+  z-index: -1;
+  /* opacity: 1; */
 }
-.img .image
-{
-    max-width: 554px;
-    width: 80vw;
-    height:auto;
-    padding: none;
-    margin: none;
-}
-
-
-.name
-{
-    position: absolute;
-    margin-left: 20px;
-    top:80vh;
-}
-.name span:nth-child(1)
-{
-    font-size: 20px;
-}
-.name span:nth-child(3)
-{
-    font-size: 40px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-@media (max-width:608px) {
-    .img{
-        /* scale:0.5; */
-        opacity: .6;
-    }
-    .name
-    {
-        top:65vh
-    }
+.img .image {
+  max-width: 554px;
+  width: 80vw;
+  height: auto;
+  padding: none;
+  margin: none;
 }
 
-
-.chartbutton{
-    position: relative;
-    width: 80%;
-    left: 50%;
-    transform: translate(-50%,0);
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-    
-
+.name {
+  position: absolute;
+  margin-left: 20px;
+  top: 80vh;
 }
-.chart{
-    padding: 10px;
-    border: 1px solid black;
-    border-radius: 10px;
+.name span:nth-child(1) {
+  font-size: 20px;
 }
-.chart:hover{
-    /* background-color: rgba(0,0,0,.04); */
-    /* box-shadow: 0px 0px 10px rgba(0,0,0,.2); */
-    text-decoration: underline;
+.name span:nth-child(3) {
+  font-size: 40px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+@media (max-width: 608px) {
+  .img {
+    /* scale:0.5; */
+    opacity: 0.6;
+  }
+  .name {
+    top: 65vh;
+  }
+}
+
+.chartbutton {
+  position: relative;
+  width: 80%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.chart {
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+.chart:hover {
+  /* background-color: rgba(0,0,0,.04); */
+  /* box-shadow: 0px 0px 10px rgba(0,0,0,.2); */
+  text-decoration: underline;
 }
