--- a/styles/chart.module.css
+++ b/styles/chart.module.css
@@ -1,76 +1,63 @@
-.canvas{
+.canvas {
   position: absolute;
-  left:140px;
-  top:60px
+  left: 140px;
+  top: 60px;
 }
-.headingblood
-{
+.headingblood {
   position: absolute;
-  top:40px;
-  left:40px;
-
+  top: 40px;
+  left: 40px;
 }
 
-.headingdia
-{
+.headingdia {
   position: absolute;
-  top:120px;
-  left:540px;
+  top: 120px;
+  left: 540px;
   /* transform: translate(50%); */
-
 }
-.headingdia .boxup{
-  color:green;
+.headingdia .boxup {
+  color: green;
   padding-left: 40px;
   padding-right: 40px;
   background-color: rgb(187, 240, 194) !important;
 }
 
-.headingliver
-{
+.headingliver {
   position: absolute;
-  top:280px;
-  left:620px;
+  top: 240px;
+  left: 580px;
   /* transform: translate(50%); */
+}
+.headinganemia {
+  position: absolute;
+  top: 440px;
+  left: 580px;
+}
 
-}
-.headinganemia{
+.headingkid {
   position: absolute;
-  top:440px;
-  left:580px
+  top: 300px;
+  left: 40px;
 }
-
-.headingkid{
+.headingelec {
   position: absolute;
-  top:300px;
-  left:40px
+  top: 520px;
+  left: 80px;
 }
-.headingelec{
+.headingmin {
   position: absolute;
-  top:520px;
-  left:80px
+  top: 580px;
+  left: 600px;
 }
-.headingmin{
-  position: absolute;
-  top:580px;
-  left:600px
-}
-.boxup{
-
-  border:1px solid black;
+.boxup {
+  border: 1px solid black;
   background-color: rgba(253, 193, 140, 0.243);
   border-radius: 10px;
-
-
 }
-.box{
+.box {
   display: flex;
-
-
-
-
 }
-.head{
+.head {
   border-bottom: 1px solid black;
   padding-left: 20px;
   padding-right: 20px;
@@ -80,22 +67,21 @@
   background-color: rgba(255, 215, 222, 0.851);
   text-align: center;
 }
-.box .tests{
-  border-right:1px solid black
+.box .tests {
+  border-right: 1px solid black;
 }
-.value ul{
+.value ul {
   background-color: rgba(240, 207, 179, 0.505);
 }
-.tests ul
-,.value ul{
+.tests ul,
+.value ul {
   list-style: none;
   padding-left: 5px;
   padding-right: 5px;
 }
-.tests ul li
-,.value ul li{
-
+.tests ul li,
+.value ul li {
   padding-top: 5px;
   padding-bottom: 5px;
-  border-bottom:1px solid white
+  border-bottom: 1px solid white;
 }
