--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,10 @@
-*
-{
-    transition: .2s;
-    margin: 0px;
-    padding: 0;
-    scroll-behavior: smooth;
+* {
+  transition: 0.2s;
+  margin: 0px;
+  padding: 0;
+  scroll-behavior: smooth;
 }
-body{
-    overflow-x: hidden;
-    background-color:rgba(235, 234, 255, 0.845);
+body {
+  overflow-x: hidden;
+  background-color: rgba(235, 234, 255, 0.845);
 }
