--- a/pages/details/details.module.css
+++ b/pages/details/details.module.css
@@ -70,7 +70,11 @@
   border-radius: 50%;
 }
 .indicator .highno {
+  top: 50%;
+  width: 16px;
+  height: 16px;
   background-color: rgb(100, 178, 100);
+  border-radius: 50%;
 }
 .symp {
   margin-top: 24px;
